--- a/index.html
+++ b/index.html
@@ -11,26 +11,87 @@
 
 <body class="home">
 
+    <!--Inicio container-->
     <div id="container">
 
-        <div id="topo">
+        <div id="topo"> <!--Inicio topo-->
 
             <h1 class="logo">Notícias cidade</h1>
 
             <ul id="Navegação-topo">
+
                 <li class="primeiro"><a id="home" href="index.html">Home</a></li>
+
                 <li><a id="brasil" href="brasil.html">Brasil</a></li>
+
                 <li><a
                     id="internacional" href="internacional.html">Internacional</a></li>
+
                 <li><a id="economia" href="economia.html">Economia</a></li>
+
                 <li><a id="saude" href="saude.html">Saúde</a></li>
+
                 <li><a id="ciencia" href="ciencia.html">Ciência</a></li>
+                
                 <li><a id="fotos" href="fotos.html">Fotos</a></li>
-            </ul>
+             </ul>
+        </div>  <!-- Fim Topo-->
+
+        <!--Inicio conteudo-->
+        <div id="conteudo">
+
+
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Primário</h2>
+                    <div class="caixa conteudo">
+                        Conteúdo
+                    </div>
+                </div>
+            </div>
+
+            <div id="secundario">
+                <div class="caixa">
+
+                    <h2>Secundário</h2>
+                    <div class="caixa conteudo">
+                        Conteúdo
+                    </div>
+
+                </div>
+            </div>
+
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        <ul>
+                            <li><a href="#">José Almdeida</a></li>
+                            <li><a href="#">Felipe Silva</a></li>
+                            <li><a href="#">Renato Rodrigues</a></li>
+                            <li><a href="#">Abelardo Silveira</a></li>
+                            <li><a href="#">André Carlos</a></li>
+                            <li><a href="#">Márcio Mello</a></li>
+                            <li><a href="#">João Pedro</a></li>
+                            <li><a href="#">Fernando Weiss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
+        <!--Fim conteudo-->
 
     </div>
+    <!-- Fim container-->
+
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            &copy; Copyright 2000-2023 Notícias cidade
+        </div>
+    </div>
+
     
 </body>
 
