Conteudo primario e secundario att 01/02

--- a/index.html
+++ b/index.html
@@ -42,22 +42,26 @@
 
 
             <div id="primario">
-                <div class="caixa">
+                <div class="caixa destaque conteudo-colunas">
                     <h2>Primário</h2>
                     <div class="caixa conteudo">
-                        Conteúdo
+                        <h3>Entrevista com felipe silva</h3>
+                        <img class="imagem-principal" src="img/taxi.jpg" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#">Leia mais!</a>
                     </div>
                 </div>
             </div>
 
             <div id="secundario">
-                <div class="caixa">
-
-                    <h2>Secundário</h2>
+                <div class="caixa destaque conteudo-colunas">
+                    <h2>Destaque</h2>
                     <div class="caixa conteudo">
-                        Conteúdo
+                        <h3>Nova legislação</h3>
+                        <img class="imagem-principal" src="img/taxi.jpg" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#">Leia mais!</a>
                     </div>
-
                 </div>
             </div>
 
@@ -75,6 +79,21 @@
                             <li><a href="#">João Pedro</a></li>
                             <li><a href="#">Fernando Weiss</a></li>
                         </ul>
+                    </div>
+                </div>
+                
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form> <!--Para todo submit, temos que ter form e seguir essa estrutura abaixo-->
+                            <div>
+                            <label for="email">Email:</label>
+                            <input type="text" name="email" id="email" placeholder="Digite seu E-mail"> <!--Placeholder é o texto qeu aparece antes de clicarmos na barra-->
+                            </div>
+                            <div>
+                                <input class="submit" type="submit" value="Cadastar"> <!--Value é o que aparece na caixa-->
+                            </div>
+                        </form>                        
                     </div>
                 </div>
             </div>
