--- a/brasil.html
+++ b/brasil.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class="home">
+<body id="duas-colunas" class="brasil">
 
     <!--Inicio container-->
     <div id="container">
@@ -98,66 +98,6 @@
 
                     </div>
                 </div>
-            </div>
-
-            <div id="secundario">
-                <div class="caixa destaque conteudo-colunas">
-                    <h2>Destaque</h2>
-                    <div class="caixa conteudo">
-                        <h3>Nova legislação</h3>
-                        <img class="imagem-principal" src="img/taxi.jpg" width="100%">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="nova-legislação.html">Leia mais!</a>   
-                    </div>
-                </div>
-
-                <div class="caixa conteudo-colunas">
-                    <h2>Mundo</h2>
-                    <div class="caixa conteudo">
-                        
-                       <ul id="lista-noticias">
-                            <li>
-                                <a href="#">
-                                    <img src="img/tecnologia.jpg">
-                                    <h3>Novas tecnologias</h3>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                       </ul> 
-
-                        <ul id="lista-noticias">
-                            <li>
-                                <a href="#">
-                                    <img src="img/cidade.jpg">
-                                    <h3>Parlamento aprovado</h3>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                        </ul> 
-
-                        <ul id="lista-noticias">
-                            <li>
-                                <a href="#">
-                                    <img src="img/taxi.jpg">
-                                    <h3>Taxistas na cidade</h3>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                        </ul> 
-
-                        <ul id="lista-noticias">
-                            <li>
-                                <a href="#">
-                                    <img src="img/doutor.jpg">
-                                    <h3>Comissão aprovada</h3>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
-
             </div>
 
             <div id="lateral">
